# VectorsDB_Homework

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
db/: docker-compose.yml
notebooks/: homework_solution.ipynb
src/: db.py  search.py  utils.py  vectorization.py
